# Poland_Landowners

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  documents.py  exports.py  ownership.py  parcels.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: admin.py  common.py  parcel.py
backend/app/services/: audit.py  parcel_service.py  parcel_validation.py
backend/app/services/connectors/: base.py  demo_poland.py  factory.py  uldk.py
backend/app/tasks/: celery_app.py
backend/tests/: test_api.py  test_connector.py  test_uldk_parsing.py  test_validation.py
docs/: legal-compliance.md
frontend/: package.json  playwright.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(app)/admin/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/exports/: page.tsx
frontend/app/(app)/imports/: page.tsx
frontend/app/(app)/parcels/[id]/: page.tsx
frontend/components/: app-shell.tsx  kpi-grid.tsx  parcel-map.tsx  parcel-search-panel.tsx  parcel-table.tsx
frontend/lib/: api.ts  demo-data.ts  types.ts
frontend/tests/e2e/: dashboard.spec.ts
seeds/: demo_parcels.json
